vmTestbase/nsk/sysdict/vm/stress/btree/btree012/btree012.java failed with "fatal error: refcount has gone to zero"

XMLWordPrintable

    • b29
    • x86_64
    • linux

        The following test failed in the JDK20 CI:

        vmTestbase/nsk/sysdict/vm/stress/btree/btree012/btree012.java

        Here's a snippet from the log file:

        #section:main
        ----------messages:(6/433)----------
        command: main -XX:-UseGCOverheadLimit nsk.sysdict.share.BTreeTest -jarpath btree.jar:fats.jar -stressHeap -useFatClass
        reason: User specified action: run main/othervm -XX:-UseGCOverheadLimit nsk.sysdict.share.BTreeTest -jarpath btree.jar${path.separator}fats.jar -stressHeap -useFatClass
        started: Sat Dec 03 18:44:10 UTC 2022
        Mode: othervm [/othervm specified]
        finished: Sat Dec 03 18:46:04 UTC 2022
        elapsed time (seconds): 114.341
        ----------configuration:(0/0)----------
        ----------System.out:(58/4211)----------
        The level = 3 the height = 4
        Stress time: 120 seconds
        Stress iterations factor: 1
        Stress threads factor: 1
        Stress runs factor: 1
        Max memory: 1038090240
        Sleep time: 500
        Iterations: 0
        Number of threads: 24
        Run GC thread: false
        Run mem diag thread: false
        Run forever: false
        Starting Thread[#33,nsk.sysdict.share.SysDictTest$Worker@3d8a47aa,5,MainThreadGroup]
        Starting Thread[#34,nsk.sysdict.share.SysDictTest$Worker@732f21b3,5,MainThreadGroup]
        Starting Thread[#35,nsk.sysdict.share.SysDictTest$Worker@1cf78f6b,5,MainThreadGroup]
        Starting Thread[#36,nsk.sysdict.share.SysDictTest$Worker@4d6ebbbf,5,MainThreadGroup]
        Starting Thread[#37,nsk.sysdict.share.SysDictTest$Worker@58bf3f80,5,MainThreadGroup]
        Starting Thread[#38,nsk.sysdict.share.SysDictTest$Worker@5297bf9d,5,MainThreadGroup]
        Starting Thread[#39,nsk.sysdict.share.SysDictTest$Worker@72bbfe73,5,MainThreadGroup]
        Starting Thread[#40,nsk.sysdict.share.SysDictTest$Worker@4a3000d8,5,MainThreadGroup]
        Starting Thread[#41,nsk.sysdict.share.SysDictTest$Worker@6b527521,5,MainThreadGroup]
        Starting Thread[#42,nsk.sysdict.share.SysDictTest$Worker@4564481,5,MainThreadGroup]
        Starting Thread[#43,nsk.sysdict.share.SysDictTest$Worker@29b36a1e,5,MainThreadGroup]
        Starting Thread[#44,nsk.sysdict.share.SysDictTest$Worker@634f8930,5,MainThreadGroup]
        Starting Thread[#45,nsk.sysdict.share.SysDictTest$Worker@1b4c0305,5,MainThreadGroup]
        Starting Thread[#46,nsk.sysdict.share.SysDictTest$Worker@2d882ea1,5,MainThreadGroup]
        Starting Thread[#47,nsk.sysdict.share.SysDictTest$Worker@1f595294,5,MainThreadGroup]
        Starting Thread[#48,nsk.sysdict.share.SysDictTest$Worker@405e46,5,MainThreadGroup]
        Starting Thread[#49,nsk.sysdict.share.SysDictTest$Worker@7bef2160,5,MainThreadGroup]
        Starting Thread[#50,nsk.sysdict.share.SysDictTest$Worker@177ee59a,5,MainThreadGroup]
        Starting Thread[#51,nsk.sysdict.share.SysDictTest$Worker@4266c813,5,MainThreadGroup]
        Starting Thread[#52,nsk.sysdict.share.SysDictTest$Worker@40d61c77,5,MainThreadGroup]
        Starting Thread[#53,nsk.sysdict.share.SysDictTest$Worker@42b0d12c,5,MainThreadGroup]
        Starting Thread[#54,nsk.sysdict.share.SysDictTest$Worker@2282aed5,5,MainThreadGroup]
        Starting Thread[#55,nsk.sysdict.share.SysDictTest$Worker@56d0ccc6,5,MainThreadGroup]
        Starting Thread[#56,nsk.sysdict.share.SysDictTest$Worker@261547cf,5,MainThreadGroup]
        Symbol: 'nsk/sysdict/share/Fats000000' count 0# To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/symbol.cpp:326
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/0c72054a-24ab-4dbb-944f-97f9341a1b96-S94928/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/55b8cb24-0946-4324-a4e7-626cc31ebb8e/runs/77eecc65-a01f-4c02-a363-1a29410dee1a/workspace/open/src/hotspot/share/oops/symbol.cpp:326), pid=2528645, tid=2528708
        # fatal error: refcount has gone to zero
        #
        # JRE version: Java(TM) SE Runtime Environment (20.0+27) (fastdebug build 20-ea+27-2081)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 20-ea+27-2081, mixed mode, sharing, compressed class ptrs, z gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1a01d8f] Symbol::increment_refcount()+0xbf
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S17409/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/240e632e-a9c7-490a-9b84-edfdee184013/runs/14dc4a14-b6f5-41d3-84b8-78993960f89d/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_sysdict/scratch/4/core.2528645)
        #
        # An error report file with more information is saved as:
        # /opt/mach5/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S17409/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/240e632e-a9c7-490a-9b84-edfdee184013/runs/14dc4a14-b6f5-41d3-84b8-78993960f89d/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_sysdict/scratch/4/hs_err_pid2528645.log
        [82.262s][warning][os] Loading hsdis library failed
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #
        ----------System.err:(0/0)----------
        ----------rerun:(37/7996)*----------

              Assignee:
              Coleen Phillimore
              Reporter:
              Daniel Daugherty
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: