src/hotspot/share/classfile/placeholders.hpp
@@ -105,13 +105,11 @@ class PlaceholderEntry {
 
   Symbol*            supername()           const { return _supername; }
   void               set_supername(Symbol* supername) {
-    Symbol::maybe_decrement_refcount(_supername);
-    _supername = supername;
-    Symbol::maybe_increment_refcount(_supername);
-  }
-  void               clear_supername() {
-    Symbol::maybe_decrement_refcount(_supername);
-    _supername = nullptr;
+    if (supername != _supername) {
+      Symbol::maybe_decrement_refcount(_supername);
+      _supername = supername;
+      Symbol::maybe_increment_refcount(_supername);
+    }
   }
 
   JavaThread*        definer()             const {return _definer; }
